# Voxel-Game

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  hate.txt  main.cpp  whatYouShouldKnow
.cache/clangd/index/: initSDL.hpp.E80DF6BA46D76F46.idx  main.cpp.5D56A4C70FC4CE36.idx
glad/: glad.c  glad.h
shaders/: fragment.glsl  vertex.glsl
src/: Block.cpp  Camera.cpp  create_buffer_objects.cpp  cube.cpp  drawing.cpp  graphics_pipeline.cpp  initSDL.cpp  initSDL.cpp~  init_SDL.cpp  input_handler.cpp  textures.cpp  vector3d.cpp
src/hpp/: Block.hpp  Camera.hpp  ScreenSize.hpp  create_buffer_objects.hpp  cube.hpp  drawing.hpp  graphics_pipeline.hpp  initSDL.hpp  init_SDL.hpp  input_handler.hpp  should_close_window.hpp  textures.hpp  vector3d.hpp
